[B]Version 1.0.2[/B]
- Updated new live url.
- Little improvements.

[B]Version 1.0.1[/B]
- Updated the url of live.
- Added the shows.
- New icon.

[B]Version 1.0.0[/B]
- Initial version.