@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.lacosa" name="La Cosa" version="1.0.2" provider-name="NeverWise">
+<addon id="plugin.lacosa" name="La Cosa" version="1.0.3" provider-name="NeverWise">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
-    <import addon="script.neverwise" version="1.0.1"/>
+    <import addon="script.neverwise" version="1.0.2"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
     <provides>video</provides>
