@@ -1,3 +1,6 @@
 <strings>
   <string id="30001">Live</string>
+  <string id="30002">Unable to retrieve the live stream.</string>
+  <string id="30003">Unable to retrieve the list of shows.</string>
+  <string id="30004">Unable to show the list of videos for this show.</string>
 </strings>
