@@ -1,3 +1,6 @@
 <strings>
   <string id="30001">Diretta</string>
+  <string id="30002">Impossibile recuperare lo stream della diretta.</string>
+  <string id="30003">Impossibile recuperare la lista dei programmi.</string>
+  <string id="30004">Impossibile visualizzare la lista dei video di questo programma.</string>
 </strings>
